going to finish coroutine; add a wrapper of dut for better management